--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation("io.reactivex.rxjava3:rxkotlin:3.0.1")
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-RC'
+    implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.5.0"
 }
 
 test {
